# corema

./: .cursorrules  .gitignore  .pre-commit-config.yaml  README.md  config.yaml  environment.yml  projects.yaml  pyproject.toml  requirements.txt
corema/: __init__.py  cli.py  collector.py  config.py  decorators.py  main.py  orchestration.py  storage.py  tasks.py
corema/pipelines/: __init__.py  common.py  model_summary.py
corema/processors/: article.py  docs.py  github.py  paper.py
corema/resources/: model_summary_prompts.py  paper_prompts.py
corema/tests/: __init__.py  conftest.py  test_article_processor.py  test_collector.py  test_config.py  test_docs_processor.py  test_github_api.py  test_github_processor.py  test_manifest.py  test_model_summary.py  test_openai_api.py  test_orchestration.py  test_paper_processor.py  utils.py
corema/utils/: github_api.py  manifest.py  names.py  openai_api.py  openai_models.py  url.py
llm_collector/: cli.py  collector.py  config.py  storage.py
llm_collector/processors/: docs.py  github.py  paper.py
llm_collector/utils/: manifest.py  url.py
resources/: preprint_server_analysis_results.json  preprint_server_foundation_models.yaml  preprint_server_search_results.json  semantic_scholar_analysis_results.json  semantic_scholar_foundation_models.yaml  semantic_scholar_search_results.json
scripts/: awesome_repo_link_parser.py  awesome_repo_project_extractor.py  crawl_scgpt_docs.py  preprint_server_search.py  run_openai_query.py  run_pdfminer_conversion.py  semantic_scholar_search.py  visualize_model_summaries.py
(+11 files in other folders)
