[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "corema"
description = "A tool for collecting and analyzing research model artifacts"
version = "0.1.0"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=4.1.0"
]

[tool.pytest.ini_options]
testpaths = ["corema/tests"]
norecursedirs = ["data/*"]
addopts = "-v --tb=short -m 'not llm'"
markers = [
    "llm: marks tests that use the OpenAI API (run with '-m llm' or remove the 'not llm' filter)"
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
strict_optional = true
